Link to GNU license list

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -111,9 +111,11 @@ agreement](/transparency).
 
 ### What does it mean to produce work under a free and open-source license?
 
-We expect both code and educational materials to be published under a free and
-open-source license and produced in the open. That means frequent, public
+We expect both code and educational materials to be published under a [free and
+open-source license][gnu] and produced in the open. That means frequent, public
 commits to GitHub (or equivalent).
+
+[gnu]: https://www.gnu.org/licenses/license-list.html
 
 Writing all your code/educational materials in private, even if you plan to
 publish them later, is not compliant with our requirements.
