Link to /faq/application from /faq

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -103,12 +103,11 @@ align with the mission of our charity to be eligible for donations.
 Any project that is free and open-source and is aligned with the OpenSats
 mission is free to [submit an application](/apply).
 
-All applications which fulfill the criteria will be evaluated by [the
-Board][board]. Upon board approval and collection of necessary supplemental
-data, approved projects might be showcased on the OpenSats website. If
-showcased, donors will be able to contribute funds and recommend that the
-OpenSats' board considers their donations be allocated towards these
-pre-approved, mission-aligned projects.
+All applications which fulfill the [criteria](/apply#criteria) will be evaluated
+by [the Board][board]. Upon board approval and collection of necessary
+supplemental data, approved projects might be showcased on the OpenSats website.
+Please refer to our dedicated [Application FAQ](/faq/application) for additional
+information pertaining to applications.
 
 If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
 our website.
