Fix anchor linking
Pointed out by Jon Atack.

Change wording on ToC for last linke to match wording on last FAQ on page to scroll/jump properly.

"...what do I do?" --> "... whom should I email?"

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -155,7 +155,7 @@ If you have something that irks you and/or suggestions for improvements, please
 let us know via support@opensats.org. We are learning as we go, so any
 feedback is highly appreciated.
 
-### I have a question that isn't covered here; what do I do?
+### I have a question that isn't covered here; whom should I email?
 
 Have a look at the [General FAQ](/faq). Your question might be answered there.
 
