--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -90,8 +90,7 @@ jurisdiction.
 
 Yes. We suggest working with your accountant or a similar professional if you
 need help setting up an entity and/or filling out the appropriate tax forms. You
-can also receive the grant as an individual. The congratulations email we sent
-you contains information on what tax form we need from you in each case.
+can also receive the grant as an individual. If your grant is approved, the email notification will contain information on what tax form we need from you in each case.
 
 ### Why do you require tax information from your grantees?
 
@@ -118,7 +117,7 @@ commits to GitHub (or equivalent).
 [gnu]: https://www.gnu.org/licenses/license-list.html
 
 Writing all your code/educational materials in private, even if you plan to
-publish them later, is not compliant with our requirements.
+publish them later, is not compliant with our grant agreement.
 
 ### Can grants be part-time or only full-time?
 
@@ -130,6 +129,7 @@ commitment with corresponding levels of financial support.
 - Have Proof of Work in the Bitcoin and/or nostr ecosystems.
 - Ask for funding for a project you have already started working on, with Proof
   of Work.
+- Consider starting with an application for a smaller and shorter grant, with clearly defined timelines and milestones. Once you have the chance to build more POW over your first grant period, you can always apply for a 2nd grant with higher budget and longer duration.
 - Be humble.
 
 ### If my application is rejected, can I reapply?
