Add clarity to FOSS requirement
What does it mean to produce work under a free and open-source license? (duplicated from application faq)

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -26,6 +26,7 @@ changes so that you can continue building under sustainable conditions.
 - [Why do you require tax information from your grantees?](#why-do-you-require-tax-information-from-your-grantees)
 - [Can OpenSats help me with an accounting or legal question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
 - [What are the requirements of my grant?](#what-are-the-requirements-of-my-grant)
+- [What does it mean to produce work under a free and open-source license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
 - [How does OpenSats evaluate the work done by a grantee?](#how-does-opensats-evaluate-the-work-done-by-a-grantee)
 - [What does an ideal progress report look like?](#what-does-an-ideal-progress-report-look-like)
 - [What does a poor progress report look like?](#what-does-a-poor-progress-report-look-like)
@@ -88,6 +89,17 @@ The general requirements are as follows:
 That’s basically it![^fn-legal]
 
 [^fn-legal]: As a public charity, we have to check various boxes on our side. Please refer to our grant agreement for any other details, linked at [opensats.org/transparency](/transparency)
+
+### What does it mean to produce work under a free and open-source license?
+
+We expect both code and educational materials to be published under a [free and
+open-source license][gnu] and produced in the open. That means frequent, public
+commits to GitHub (or equivalent).
+
+[gnu]: https://www.gnu.org/licenses/license-list.html
+
+Writing all your code/educational materials in private, even if you plan to
+publish them later, is not compliant with our grant agreement.
 
 ### How does OpenSats evaluate the work done by a grantee?
 
