--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -134,12 +134,13 @@ commitment with corresponding levels of financial support.
 
 ### If my application is rejected, can I reapply?
 
-Yes. We suggest improving your application or putting in more Proof of Work
-before applying again. Also, consider starting with an application for a smaller
-and shorter grant, with clearly defined timelines and milestones. Once you have
-the chance to build more POW over your first grant period, you can always apply
-for a 2nd grant with higher budget and longer duration. If you have questions
-about why your application was rejected, contact us at
+Yes. We suggest:
+
+- Putting in more Proof of Work
+- Improving your application
+- Consider applying for a shorter grant of 3 or 6 months
+
+If you would like feedback on why your application was rejected, contact us at
 [support@opensats.org](mailto:support@opensats.org).
 
 ### Can anyone apply?
