Application FAQ: Move bullet point from one section to next (#407)

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -90,7 +90,8 @@ jurisdiction.
 
 Yes. We suggest working with your accountant or a similar professional if you
 need help setting up an entity and/or filling out the appropriate tax forms. You
-can also receive the grant as an individual. If your grant is approved, the email notification will contain information on what tax form we need from you in each case.
+can also receive the grant as an individual. If your grant is approved, the email 
+notification will contain information on what tax form we need from you in each case.
 
 ### Why do you require tax information from your grantees?
 
@@ -129,14 +130,18 @@ commitment with corresponding levels of financial support.
 - Have Proof of Work in the Bitcoin and/or nostr ecosystems.
 - Ask for funding for a project you have already started working on, with Proof
   of Work.
-- Consider starting with an application for a smaller and shorter grant, with clearly defined timelines and milestones. Once you have the chance to build more POW over your first grant period, you can always apply for a 2nd grant with higher budget and longer duration.
 - Be humble.
 
 ### If my application is rejected, can I reapply?
 
-Yes. We suggest improving your application or putting in more Proof of Work
-before applying again. If you have questions about why your application was
-rejected, contact us at [support@opensats.org](mailto:support@opensats.org).
+Yes. We suggest:
+
+- Putting in more Proof of Work
+- Improving your application
+- Consider applying for a shorter grant of 3 or 6 months
+
+If you would like feedback on why your application was rejected, contact us at
+[support@opensats.org](mailto:support@opensats.org).
 
 ### Can anyone apply?
 
