Fix anchor linking (opensats.org/faq/application) (#403)
* Fix anchor linking

Pointed out by Jon Atack.

Change wording on ToC for last linke to match wording on last FAQ on page to scroll/jump properly.

"...what do I do?" --> "... whom should I email?"

* Fix ToC, not headline

---------

Co-authored-by: Gigi <dergigi@pm.me>

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -31,7 +31,7 @@ not covered below.
 - [If my application is rejected, can I reapply?](#if-my-application-is-rejected-can-i-reapply)
 - [Can anyone apply?](#can-anyone-apply)
 - [What should I do if I have general praise or criticism regarding OpenSats?](#what-should-i-do-if-i-have-general-praise-or-criticism-regarding-opensats)
-- [I have a question that isn't covered here; whom should I email?](#i-have-a-question-that-isnt-covered-here-whom-should-i-email)
+- [I have a question that isn't covered here; what do I do?](#i-have-a-question-that-isnt-covered-here-what-do-i-do)
 
 ---
 
