again: edit to fix donate to ops budget button
Removed "Budget"

--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -43,5 +43,5 @@ Fund](/funds/nostr), or our [Operations Budget](/funds/ops). Your support drives
 meaningful innovation and helps us champion the technologies of tomorrow.
 
 <center>
-<DonateToOperationsBudgetButton />
+<DonateToOperationsButton/>
 </center>
