--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -2,8 +2,9 @@
 title: "Additional Operational Budget from HRF"
 date: '2025-02-18'
 tags: ['OpenSats', 'funding', 'donations', 'operations']
-images: ['/static/images/blog/69-additional-ops-budget-from-hrf.jpg']
 draft: false
+authors: ['arvin', 'default']
+images: ['/static/images/blog/69-additional-ops-budget-from-hrf.jpg']
 summary: "OpenSats secures a $250,000 grant from HRF's Bitcoin Development Fund for our Operations Budget."
 ---
 
