Edit to remove erroneous ">" symbol from quote.

--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -26,7 +26,7 @@ and effective.
 
 >OpenSats is a powerful force for good in the world. Their largely
 >volunteer-driven team has an outsized impact, and HRF is thrilled to support
->their >important work with this grant to help sustain their operations."
+>their important work with this grant to help sustain their operations."
 >
 ><cite>—Christian Keroles, Director of Financial Freedom at the Human Rights
 >Foundation (HRF)</cite>
