Simplify final paragraph
"Don't make me think!"

--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -39,8 +39,7 @@ empowers us to continue our behind-the-scenes work, which keeps our
 
 We are grateful to HRF for their trust and support. If you share our commitment
 to fostering open-source development in the Bitcoin and nostr ecosystems, please
-consider donating to our [General Fund](/funds/general), [The Nostr
-Fund](/funds/nostr), or our [Operations Budget](/funds/ops). Your support drives
+consider donating to our cause. Your support drives
 meaningful innovation and helps us champion the technologies of tomorrow.
 
 <center>
