--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -24,12 +24,11 @@ This generous contribution is specifically allocated for our [Operations
 Budget](/funds/ops), ensuring our essential operational functions remain robust
 and effective.
 
->OpenSats is a powerful force for good in the world. Their largely
->volunteer-driven team has an outsized impact, and HRF is thrilled to support
->their important work with this grant to help sustain their operations.
+> OpenSats is a powerful force for good in the world. Their largely
+> volunteer-driven team has an outsized impact, and HRF is thrilled to support
+> their important work with this grant to help sustain their operations.
 >
-><cite>—Christian Keroles, Director of Financial Freedom at the Human Rights
->Foundation (HRF)</cite>
+><cite>—Christian Keroles, Director of Financial Freedom at the Human Rights Foundation (HRF)</cite>
 
 Unlike our General Fund and The Nostr Fund, which pass 100% of donations
 directly to developers and projects, the Operations Budget is what sustains the
