Remove duplicate (HRF)

--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -9,7 +9,7 @@ summary: "OpenSats secures a $250,000 grant from HRF's Bitcoin Development Fund 
 ---
 
 OpenSats is thrilled to announce a $250,000 donation from the Human Rights
-Foundation's (HRF) Bitcoin Development Fund, first
+Foundation's Bitcoin Development Fund, first
 [announced](https://hrf.org/latest/hrf-bitcoin-development-fund-grants-one-billion-satoshis-to-13-projects-worldwide/)
 during the 2024 Oslo Freedom Forum.
 
