Remove "at the HRF" (it's implicit)

--- a/data/blog/additional-ops-budget-from-hrf.mdx
+++ b/data/blog/additional-ops-budget-from-hrf.mdx
@@ -28,7 +28,7 @@ and effective.
 > volunteer-driven team has an outsized impact, and HRF is thrilled to support
 > their important work with this grant to help sustain their operations.
 >
-><cite>—Christian Keroles, Director of Financial Freedom at the Human Rights Foundation (HRF)</cite>
+><cite>—Christian Keroles, Director of Financial Freedom</cite>
 
 Unlike our General Fund and The Nostr Fund, which pass 100% of donations
 directly to developers and projects, the Operations Budget is what sustains the
