--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -2,7 +2,7 @@
 name: Arvin
 nym: arvin
 avatar: /static/images/volunteers/arvin.jpg
-occupation: Operations Assistant
+occupation: Operations Manager
 company: OpenSats
 email: arvin@opensats.org
 nostr: npub18p66zmyh3q2rgejqencuz6dduuggdn7arg4eqn6x44jerxyy2mys670x7y
