--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -10,11 +10,8 @@ github: https://github.com/Arvin21M
 ops: true
 ---
 
-Arvin's two-decade career in consumer credit, finance, and technology
-cultivated a passion for empowering innovation.
-
-At his essence, Arvin is captivated by the transformative capabilities of
-Bitcoin and Nostr, viewing them as pivotal equalizers that are unlocking
-boundless human potential. Arvin devotes his time to contributing towards 
-a future where free and open-source software and protocols enable a more 
-honest, equitable, and interconnected society.
+Arvin’s two-decade career in consumer credit, finance, and technology ignited
+his passion for innovation. Inspired by Bitcoin and Nostr as transformative
+equalizers that unlock boundless human potential, he now devotes his time to
+supporting a future where these technologies will foster a more honest, fair,
+and interconnected society.
