--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -11,7 +11,7 @@ ops: true
 ---
 
 Arvin’s two-decade career in consumer credit, finance, and technology ignited
-his passion for innovation. Inspired by Bitcoin and Nostr as transformative
-equalizers that unlock boundless human potential, he now devotes his time to
-supporting a future where these technologies will foster a more honest, fair,
-and interconnected society.
+his passion for empowering innovation. Inspired by Bitcoin and Nostr as
+transformative equalizers that unlock boundless human potential, he now devotes
+his time to supporting a future where these technologies will foster a more
+honest, fair, and interconnected society.
