Remove double quotation marks

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -15,12 +15,12 @@ activity have multiple avenues to track unsuspecting users. Greg Maxwell, a
 pioneer in Bitcoin's open-source development, captured these privacy concerns
 succinctly in 2013:
 
->"Traditional banking provides a fair amount of privacy by default. Your inlaws
+>Traditional banking provides a fair amount of privacy by default. Your inlaws
 >don't see that you're buying birth control that deprives them of grandchildren,
 >your employer doesn't learn about the non-profits you support with money from
 >your paycheck, and thieves don't see your latest purchases or how wealthy you
 >are to help them target and scam you. Poor privacy in Bitcoin can be a major
->practical disadvantage for both individuals and businesses."
+>practical disadvantage for both individuals and businesses.
 
 Ensuring that bitcoin use remains private and secure requires ongoing
 development, and OpenSats grantees are at the forefront of this effort. As part
@@ -90,14 +90,14 @@ also allows businesses to batch multiple transactions—reducing on-chain
 activity, and saving fees—while maintaining a streamlined user experience.
 Francis Pouliot, CEO of Bull Bitcoin goes on to say:
 
->"Without the OpenSats grant awarded to [Payjoin Dev
+>Without the OpenSats grant awarded to [Payjoin Dev
 >Kit](https://github.com/payjoin), Payjoin V2 may never have come to exist and
 >would have remained an idea in the mind of cypherpunks. Now that Payjoin Dev
 >Kit has proven that an app like Bull Bitcoin can integrate Payjoin easily, many
 >other apps are sure to follow. [...] Not only does this benefit users by
 >offering them opportunistic UTXO consolidation without compromising on privacy,
 >but it benefits the entire Bitcoin network by challenging the heuristics used
->by nefarious blockchain observers."
+>by nefarious blockchain observers.
 
 Indeed, multiple Payjoin V2 integrations are already live or in progress with
 BitMask, Bitcoin Core, Galoy's Bria payment processor, and Boltz following Bull
