Payjoin V2 --> Async Payjoin
https://github.com/OpenSats/website/pull/411/files#r1970702828

Co-authored-by: Dan Gould <d@ngould.dev>

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -44,7 +44,7 @@ privacy and thus end-user security.
 
 ---
 
-### Payjoin V2
+### Async Payjoin
 
 One of the most powerful tools for on-chain privacy is breaking the assumptions
 used by blockchain surveillance, which are based on various heuristics and
