Add "synchronous" for better context.
Per Grantee feedback.

Co-authored-by: Dan Gould <d@ngould.dev>

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -68,7 +68,7 @@ disrupted the CIOH assumption by modifying how transactions are constructed.
 Instead of a straightforward sender-to-recipient payment, the recipient also
 contributes one of their inputs to the transaction. This process reduces the
 effectiveness of common tracking and surveillance methods in use today. However,
-the challenge with this version was that it required real-time coordination,
+the challenge with this version was that it required real-time, synchronous coordination,
 meaning both sender and receiver had to be online at the same time, which is not
 practical at scale.
 
