Edits for better clarity and relevance.
https://github.com/OpenSats/website/pull/411/files#r1970707409

Co-authored-by: Dan Gould <d@ngould.dev>

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -75,12 +75,12 @@ practical at scale.
 Thanks in part to [OpenSats
 funding](/blog/bitcoin-grants-july-2023#payjoin-dev-kit), Payjoin V2 ([BIP
 77](https://github.com/bitcoin/bips/pull/1483)) launched in 2024, implementing a
-major improvement called asynchronous transactions. Due to this, Payjoin V2 no
+major improvement called Async Payjoin. Because of this, Payjoin V2 no
 longer requires both sender and receiver to be online simultaneously, making
 private and secure transactions seamless for users. This enhancement makes it
-easier for mobile wallets and exchanges to integrate Payjoin without disrupting
+easier for mobile wallets and exchanges to integrate Payjoin by default without disrupting
 their existing user workflows, making privacy and security protections more
-accessible to a wider audience.
+accessible to a wider user base.
 
 In December 2024, Bull Bitcoin became the first bitcoin exchange to process
 Payjoin V2 withdrawals natively. This
