Update wording to better match projects current live implementation.
Per Grantee feedback.

Co-authored-by: Dan Gould <d@ngould.dev>

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -82,8 +82,8 @@ easier for mobile wallets and exchanges to integrate Payjoin by default without 
 their existing user workflows, making privacy and security protections more
 accessible to a wider user base.
 
-In December 2024, Bull Bitcoin became the first bitcoin exchange to process
-Payjoin V2 withdrawals natively. This
+In December 2024, Bull Bitcoin Mobile became the first mobile wallet to enable
+sending and receiving Async Payjoin. This
 [milestone](https://www.bullbitcoin.com/blog/bull-bitcoin-wallet-payjoin) marks
 a significant shift. Not only does Payjoin enhance privacy and security, but it
 also allows businesses to batch multiple transactions—reducing on-chain
