--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -85,7 +85,7 @@ accessible to a wider user base.
 In December 2024, Bull Bitcoin Mobile became the first mobile wallet to enable
 sending and receiving Async Payjoin. This
 [milestone](https://www.bullbitcoin.com/blog/bull-bitcoin-wallet-payjoin) marks
-a significant shift. Not only does Payjoin enhance privacy and security, but it
+a significant shift. Not only does Payjoin preserve privacy and security, but it
 also allows businesses to batch multiple transactions—reducing on-chain
 activity, and saving fees—while maintaining a streamlined user experience.
 Francis Pouliot, CEO of Bull Bitcoin goes on to say:
