Update ToC to match H3 for Payjoin pt. 2

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -31,7 +31,7 @@ announced in [July](/blog/bitcoin-grants-july-2023#payjoin-dev-kit) 2023,
 [August](/blog/josi-baker-receives-opensats-lts-grant) 2023, and
 [October](/blog/8th-wave-of-bitcoin-grants#citadel-tech) 2024, respectively:
 
-- [Payjoin](#async-payjoin)
+- [Async Payjoin](#async-payjoin)
 
 - [Coinswap](#coinswap)
 
