--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -63,6 +63,7 @@ as in the internal and external processes of our organization.
 - [2024-Q1](/docs/minutes/2024-Q1.pdf)
 - [2024-Q2](/docs/minutes/2024-Q2.pdf)
 - [2024-Q3](/docs/minutes/2024-Q3.pdf)
+- [2024-Q4](/docs/minutes/2024-Q4.pdf)
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
