Edit: Josi --> Josie
Per Grantee feedback & confirmation.

Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -156,7 +156,7 @@ and businesses to transact freely without fear of surveillance.
 
 Developed by OpenSats
 [LTS](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
-grantee [Josi Baker](/blog/josi-baker-receives-opensats-lts-grant), Silent
+grantee [Josie Baker](/blog/josi-baker-receives-opensats-lts-grant), Silent
 Payments ([BIP
 352](https://github.com/bitcoin/bips/blob/master/bip-0352.mediawiki)) is an
 improvement proposal that enables users to receive bitcoin without revealing
