Set up wording for recurring donations

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -8,6 +8,23 @@ layout: PageLayout
 Fill out the form below to donate to our [General Fund][gf]. Most of our grants
 as well as our long-term support program are sourced from this fund.
 
+---
+
+# Give Monthly
+
+Become a vital part of [our mission](/mission) by setting up a recurring
+donation! Your ongoing support ensures that we can consistently fund innovative
+Bitcoin projects and empower developers, making a lasting impact for many years
+to come.
+
+🧡
+
+---
+
+# Give Once
+
+You can donate fiat or anonymously with bitcoin.
+
 <DonateToGeneralFundForm/>
 
 ---
