--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,8 +5,8 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Fill out the form below to donate to our [General Fund][gf]. Most of our grants
-as well as our long-term support program are sourced from this fund.
+Unless otherwise indicated donations will go to our [General Fund][gf]. Most of
+our grants as well as our long-term support program are sourced from this fund.
 
 ---
 
