--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -17,7 +17,7 @@ donation! Your ongoing support ensures that we can consistently fund innovative
 Bitcoin projects and empower developers, making a lasting impact for many years
 to come.
 
-🧡
+<DonateRecurringButton/>
 
 ---
 
