--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -14,8 +14,7 @@ our grants as well as our long-term support program are sourced from this fund.
 
 Become a vital part of [our mission](/mission) by setting up a recurring
 donation! Your ongoing support ensures that we can consistently fund innovative
-Bitcoin projects and empower developers, making a lasting impact for many years
-to come.
+projects and empower developers, making a lasting impact for many years to come.
 
 <DonateRecurringButton/>
 
