--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,18 +5,30 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Unless otherwise indicated donations will go to our [General Fund][gf]. Most of
+Unless otherwise indicated donations will go to our _General Fund_. Most of
 our grants as well as our long-term support program are sourced from this fund.
 
 ---
 
 # Give Monthly
 
-Become a vital part of [our mission](/mission) by setting up a recurring
-donation! Your ongoing support ensures that we can consistently fund innovative
-projects and empower developers, making a lasting impact for many years to come.
+Become a vital part of our mission by setting up a recurring donation! Your
+ongoing support ensures that we can consistently fund innovative projects and
+empower developers, making a lasting impact for many years to come.
 
 <DonateRecurringButton/>
+
+Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit
+organization. All gifts and donations are tax-deductible to the full extent of
+the law.
+
+Thank you for considering a donation to OpenSats. Your continued support is
+crucial in helping us to fulfil our mission: to support and maintain a
+sustainable ecosystem of funding for free and open-source projects and
+contributors. We are committed to transparency and accountability, which is why
+we invite you to explore our transparency page and impact reports. There, you
+can see how your contributions are making a real difference and helping us
+empower developers to create a strong and bright future for freedom tech!
 
 ---
 
