--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -6,19 +6,21 @@ layout: PageLayout
 ---
 
 Become a vital part of our mission by setting up a recurring donation! Your
-ongoing support ensures that we can consistently fund innovative projects and
-empower developers, making a lasting impact for many years to come.
+ongoing support ensures we can consistently fund innovative projects and
+empower developers, creating a lasting impact for years to come.
 
 <DonateRecurringButton/>
 
 Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit
-organization. All gifts and donations are tax-deductible to the full extent of
+organization. All donations are tax-deductible to the full extent of
 the law.
 
 Thank you for considering a donation to OpenSats. Your continued support is
-crucial in helping us to fulfil our mission: to support and maintain a
-sustainable ecosystem of funding for free and open-source projects and
-contributors. We are committed to transparency and accountability, which is why
+crucial in helping us to fulfill our mission: to support and maintain a
+sustainable funding ecosystem for free and open-source projects and
+contributors. 
+
+We are committed to transparency and accountability, which is why
 we invite you to explore our transparency page and impact reports. There, you
 can see how your contributions are making a real difference and helping us
 empower developers to create a strong and bright future for freedom tech!
