--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -16,7 +16,7 @@ organization. All donations are tax-deductible to the full extent of
 the law.
 
 Thank you for considering a donation to OpenSats. Your continued support is
-crucial in helping us to fulfill our mission: to support and maintain a
+crucial in helping us fulfill our mission: to support and maintain a
 sustainable funding ecosystem for free and open-source projects and
 contributors. 
 
