Enable monthly recurring donations via Stripe (#414)
* Set up wording for recurring donations

* Reword

* Add button for recurring donations

* Improve button styling

* Better wording

* Add text; remove links

* Simplify

Don't make me think!

* Improve button appearance on hover

* Copy edits

Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

* Update stripe link to recurring

* Don't hide button border on hover

* Copyedit

Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

---------

Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/pages/donate.mdx
+++ b/data/pages/donate.mdx
@@ -5,8 +5,31 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Fill out the form below to donate to our [General Fund][gf]. Most of our grants
-as well as our long-term support program are sourced from this fund.
+Become a vital part of our mission by setting up a recurring donation! Your
+ongoing support ensures we can consistently fund innovative projects and
+empower developers, creating a lasting impact for years to come.
+
+<DonateRecurringButton/>
+
+Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit
+organization. All donations are tax-deductible to the full extent of
+the law.
+
+Thank you for considering a donation to OpenSats. Your continued support is
+crucial in helping us fulfill our mission: to support and maintain a
+sustainable funding ecosystem for free and open-source projects and
+contributors. 
+
+We are committed to transparency and accountability, which is why
+we invite you to explore our transparency page and impact reports. There, you
+can see how your contributions are making a real difference and helping us
+empower developers to create a strong and bright future for freedom tech!
+
+---
+
+# Give Once
+
+You can donate fiat or anonymously with bitcoin.
 
 <DonateToGeneralFundForm/>
 
