--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -195,7 +195,7 @@ These scalable innovations are making robust, user-friendly privacy solutions a
 reality for individuals and businesses, ensuring that Bitcoin remains a truly
 permissionless and resilient digital cash system. And while these projects
 represent major steps forward, they are just one part of a broader effort to
-make Bitcoin even more efficient and secure. Across the ecosystem—developers are
+make Bitcoin even more efficient and secure. Across the ecosystem, developers are
 continuously working on new solutions, many of which are supported by OpenSats.
 
 Bitcoin's advancement depends on active, collaborative development, with
