Use monthly button for a change

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -209,7 +209,7 @@ development of open-source projects that empower users and secure our financial
 future.
 
 <center>
-    <DonateToGeneralFundButton/>
+    <DonateRecurringButton/>
 </center>
 
 If you are a developer working on open-source software that makes Bitcoin even
