--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -2,7 +2,7 @@
 title: "Advancements in On-Chain Privacy"
 date: '2025-02-28'
 tags: ['OpenSats', 'bitcoin', 'impact', 'privacy']
-authors: ['arvin', 'julian', 'default']
+authors: ['default', 'arvin', 'julian']
 images: ['/static/images/blog/70-developing-advancements-in-onchain-privacy.jpg']
 draft: false
 summary: "An impact report from the front-lines of bitcoin development."
