`rust-bitcoin` formatting

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -174,7 +174,7 @@ been opened to implement essential features like address generation and
 transaction handling, alongside ongoing work on the [libsecp256k1] module to
 optimize cryptographic operations.
 
-Beyond Bitcoin Core, Silent Payments is being integrated into the [Rust-Bitcoin]
+Beyond Bitcoin Core, Silent Payments is being integrated into the [`rust-bitcoin`]
 library to streamline adoption in Rust-based applications. Developers have also
 introduced [SilentPay], a TypeScript library designed to facilitate easy
 cross-platform implementation, ensuring broader access to the protocol.
