--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -171,10 +171,10 @@ integration into Bitcoin Core, [third-party
 wallets](https://silentpayments.xyz/docs/wallets/), and developer libraries.
 Multiple [pull requests](https://github.com/bitcoin/bitcoin/issues/28536) have
 been opened to implement essential features like address generation and
-transaction handling, alongside ongoing work on the [libsecp256k1] module to
+transaction handling, alongside ongoing work on the [`libsecp256k1`][libsecp] module to
 optimize cryptographic operations.
 
-Beyond Bitcoin Core, Silent Payments is being integrated into the [`rust-bitcoin`]
+Beyond Bitcoin Core, Silent Payments is being integrated into the [`rust-bitcoin`][rust]
 library to streamline adoption in Rust-based applications. Developers have also
 introduced [SilentPay], a TypeScript library designed to facilitate easy
 cross-platform implementation, ensuring broader access to the protocol.
@@ -217,6 +217,6 @@ better than it is today, don't hesitate to [apply for funding](/apply).
 
 [Coinswap]: https://github.com/citadel-tech/Coinswap-Protocol-Specification/blob/main/v1/0_introduction.md#introduction
 [Chris Belcher]: https://gist.github.com/chris-belcher/9144bd57a91c194e332fb5ca371d0964
-[libsecp256k1]: https://github.com/bitcoin-core/secp256k1?tab=readme-ov-file#libsecp256k1
-[Rust-Bitcoin]: https://github.com/rust-bitcoin/rust-bitcoin?tab=readme-ov-file#rust-bitcoin
+[libsecp]: https://github.com/bitcoin-core/secp256k1?tab=readme-ov-file#libsecp256k1
+[rust]: https://github.com/rust-bitcoin/rust-bitcoin?tab=readme-ov-file#rust-bitcoin
 [SilentPay]: https://github.com/Bitshala-Incubator/silent-pay?tab=readme-ov-file#silentpay---a-wallet-library-for-silent-payments
