Add links to bitcoin optech
(some folks might want to dig deeper)

--- a/data/blog/developing-advancements-in-onchain-privacy.mdx
+++ b/data/blog/developing-advancements-in-onchain-privacy.mdx
@@ -187,8 +187,8 @@ individuals and businesses alike.
 
 ### The Road Ahead for Bitcoin Privacy
 
-The advancements achieved by OpenSats grantees in Payjoin, Coinswap, and Silent
-Payments mark significant progress with on-chain privacy, disrupting transaction
+The advancements achieved by OpenSats grantees in [Payjoin][PJ], [Coinswap][CS], and [Silent
+Payments][SP] mark significant progress with on-chain privacy, disrupting transaction
 surveillance, while promoting greater financial sovereignty.
 
 These scalable innovations are making robust, user-friendly privacy solutions a
@@ -220,3 +220,6 @@ better than it is today, don't hesitate to [apply for funding](/apply).
 [libsecp]: https://github.com/bitcoin-core/secp256k1?tab=readme-ov-file#libsecp256k1
 [rust]: https://github.com/rust-bitcoin/rust-bitcoin?tab=readme-ov-file#rust-bitcoin
 [SilentPay]: https://github.com/Bitshala-Incubator/silent-pay?tab=readme-ov-file#silentpay---a-wallet-library-for-silent-payments
+[PJ]: https://bitcoinops.org/en/topics/payjoin/
+[CS]: https://bitcoinops.org/en/topics/coinswap/
+[SP]: https://bitcoinops.org/en/topics/silent-payments/
