--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -1,24 +1,24 @@
 ---
-title: "Long-Term Support For Josi Baker"
+title: "Long-Term Support For Josie Baker"
 date: '2023-08-16'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'core']
 draft: false
 authors: ['jamesob']
 images: ['/static/images/blog/05-josi.jpg']
-summary: "OpenSats Welcomes Josiah Baker as an LTS Grantee."
+summary: "OpenSats Welcomes Josie Baker as an LTS Grantee."
 ---
 
-We're delighted to announce [Josi Baker](https://github.com/josibake) as our
+We're delighted to announce [Josie Baker](https://github.com/josibake) as our
 newest LTS grantee.
 
-Josi will receive long-term support from OpenSats for his continued work on
+Josie will receive long-term support from OpenSats for his continued work on
 Bitcoin Core. His work will consist of pull-request reviews,[^fn-reviews]
 supporting major release cycles, and his own contributions.[^fn-prs]
 
 [^fn-reviews]: [PR reviews by @josibake](https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+reviewed-by%3Ajosibake)
 [^fn-prs]: [PRs by @josibake](https://github.com/bitcoin/bitcoin/pulls/josibake)
 
-In the next couple of months, Josi plans to work on the [libbitcoinkernel
+In the next couple of months, Josie plans to work on the [libbitcoinkernel
 project](https://github.com/bitcoin/bitcoin/issues/27587) as a reviewer, tester,
 and contributor. The `libbitcoinkernel` project is an attempt at modularizing
 the Bitcoin codebase and extracting consensus logic into something other
@@ -46,12 +46,12 @@ Bitcoin-related projects and projects that help Bitcoin flourish. Regular
 contributors reviewing and maintaining Bitcoin Core are critical to the
 project's continued success. Sustainable funding allows contributors to build
 expertise over multiple years, which is why we introduced the [OpenSats LTS
-program](https://opensats.org/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors).
+program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors).
 
 You can apply for the program here:
 
 - [opensats.org/apply/lts](https://opensats.org/apply/lts)
 
-Support for Josi's work is sourced from our General Fund and made possible by
-generous donors like you. If you would like to support work like Josi's,
+Support for Josie's work is sourced from our General Fund and made possible by
+generous donors like you. If you would like to support work like Josie's,
 consider [donating to the fund](https://opensats.org/projects/general_fund).
