Introduce "Reports & Statistics" section

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -34,6 +34,11 @@ as in the internal and external processes of our organization.
 - [The Nostr Fund](/blog/nostr-grants-july-2023)
 - [Nostr Design](/tags/design)
 
+## Reports & Statistics
+
+- [EOY Report: 2023](/blog/2023-year-in-review)
+- [EOY Report: 2024](/blog/2024-year-in-review)
+
 ## Grants & Grantees
 
 - [List of Bitcoin Grants](/tags/bitcoin)
@@ -41,12 +46,10 @@ as in the internal and external processes of our organization.
 - [List of Education Grants](/tags/education)
 - [List of LTS Grantees](/tags/lts)
 
-## Selection & Reports
+## Grant Selection & Agreement
 
 - [Grant Selection Process](/selection)
 - [Grant Agreement](/docs/agreement.pdf)
-- [EOY Report: 2023](/blog/2023-year-in-review)
-- [EOY Report: 2024](/blog/2024-year-in-review)
 
 ## Ethics & Compliance
 
