Add link to impact reports

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -36,6 +36,7 @@ as in the internal and external processes of our organization.
 
 ## Reports & Statistics
 
+- [Impact Reports](/tags/impact)
 - [EOY Report: 2023](/blog/2023-year-in-review)
 - [EOY Report: 2024](/blog/2024-year-in-review)
 
