--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -40,7 +40,7 @@ contributions, and their role in strengthening the Bitcoin ecosystem.
 
 [Bitcoin Safe](https://bitcoin-safe.org/en/) is an open-source, self-sovereign
 bitcoin wallet designed for secure and intuitive self-custody. By integrating
-[BDK](https://bitcoindevkit.org/), [nostr], and Compact Block Filters [BIP 158],
+[BDK](https://bitcoindevkit.org/), [nostr], and Compact Block Filters ([BIP 158]),
 it enhances privacy and reliability while reducing reliance on centralized
 servers. Currently in beta, Bitcoin Safe streamlines self-custody by simplifying
 single- and multi-signature storage, drawing inspiration from Electrum, Sparrow,
