Add missing punctuation

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -109,7 +109,7 @@ community with methodologies and frameworks to better support FOSS contributors.
 By fostering a more resilient and diverse developer community, Waye aims to
 strengthen the human infrastructure essential for advancing decentralized
 technologies. If you are an open-source developer looking for support, [reach
-out to Waye](mailto:waye.dev@gmail.com)
+out to Waye](mailto:waye.dev@gmail.com).
 
 Repository: [waye-dev/waye](https://github.com/waye-dev/waye)  
 License: N/A
