Update grant project licenses

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -112,7 +112,7 @@ technologies. If you are an open-source developer looking for support, [reach
 out to Waye](mailto:waye.dev@gmail.com).
 
 Repository: [waye-dev/waye](https://github.com/waye-dev/waye)  
-License: N/A
+Licenses: MIT & CC BY-SA 4.0
 
 In addition to the above, OpenSats has also renewed project grants for
 [Floresta](/blog/bitcoin-grants-september-2024-7th-wave#floresta),
