Convert to bullet point list

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -23,10 +23,11 @@ The three first-time project grants in this wave are:
 - [Stable Channels](#stable-channels)
 - [Waye](#waye)
 
-In addition to the above, OpenSats has also renewed project grants for
-[Floresta](/blog/bitcoin-grants-september-2024-7th-wave#floresta),
-[Krux](/blog/bitcoin-grants-july-2024#krux), and
-[Krux-Installer](/blog/bitcoin-grants-july-2024#krux-installer).
+In addition to the above, OpenSats has renewed project grants for:
+
+- [Floresta](/blog/bitcoin-grants-september-2024-7th-wave#floresta)
+- [Krux](/blog/bitcoin-grants-july-2024#krux)
+- [Krux-Installer](/blog/bitcoin-grants-july-2024#krux-installer)
 
 Thanks to the generosity of our donors, OpenSats can actively support the
 open-source developers and projects that are building key Bitcoin infrastructure
