--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -30,8 +30,8 @@ In addition to the above, OpenSats has renewed project grants for:
 - [Krux-Installer](/blog/bitcoin-grants-july-2024#krux-installer)
 
 Thanks to the generosity of our donors, OpenSats can actively support the
-open-source developers and projects that are building key Bitcoin infrastructure
-and helping Bitcoin flourish.
+open-source developers and projects that are building key infrastructure
+and helping bitcoin flourish.
 
 <center>
     <DonateToGeneralFundButton/>
