Remove advertisement language

--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -52,8 +52,8 @@ servers. Currently in beta, Bitcoin Safe streamlines self-custody by simplifying
 single- and multi-signature storage, drawing inspiration from Electrum, Sparrow,
 and mempool.space.
 
-One of Bitcoin Safe's standout features is "Sync & Chat", an innovative
-messaging system that leverages nostr relays to route encrypted messages and
+One of Bitcoin Safe's standout features is "Sync & Chat", a nostr-based
+messaging system that leverages relays to route encrypted messages and
 metadata between users and devices.  Whenever a Bitcoin Safe Wallet sends a
 [PBST](https://bitcoinops.org/en/topics/psbt/) to another Bitcoin Safe Wallet,
 the transaction labels are synced between devices, and when multi-sig users
